# collaborative-music-recommender

./: .gitignore  PUBLISH.md  README.md  pyproject.toml  requirements.txt
data/: README.md
data/sample/: user_top_albums.csv  user_top_artists.csv  user_top_tracks.csv
demos/: app_gradio.py  demo_cli.py
music_recs/: __init__.py  catalog.py  data.py  evaluate.py  recommend.py  similarity.py
music_recs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: Music Recommendation.ipynb
scripts/: build_sample_data.py
tests/: test_recommender.py
