[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recs"
version = "0.1.0"
description = "Collaborative music recommender on Last.fm-style listening data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
ui = ["gradio>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["music_recs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
